--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,8 +30,9 @@
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.6",
     "expo-media-library": "^17.1.7",
-    "expo-router": "~5.1.0",
+    "expo-router": "~5.1.4",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -48,9 +49,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.6"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
