--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "expo": "^53.0.19",
-    "multer": "^2.0.1",
-    "react-native-maps": "1.20.1"
+    "multer": "^2.0.1"
   }
 }
